--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.16.4",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2"
+    ,"morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
