--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "prop-types": "^15.8.1",
